Add jngo asset bundle

--- a/AHKM.csproj
+++ b/AHKM.csproj
@@ -39,5 +39,6 @@
   <ItemGroup>
     <EmbeddedResource Include="Resources/**" />
     <EmbeddedResource Remove="Resources/.gitignore" />
+    <EmbeddedResource Include="Assets/*" />
   </ItemGroup>
 </Project>
